[package]
name = "hello"
version = "0.1.0"
authors = ["Greg Price <gnprice@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator-global = { version = "0.3", optional = true }
pyembed = { path = "pyembed" }

[features]
default = []
jemalloc = ["jemallocator-global", "pyembed/jemalloc"]
